--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
         </li>
       </ul>
     </nav>
-    <a class="header__logo" href="">
-      <img
-              src="./images/logo-black.svg"
-              alt="Site logo"
-              width="148"
-              height="105">
+    <a class="header__logo" href="#">
+      <img src="./images/logo-black.svg"
+           alt="черный логотип сайта Оно тебе надо"
+           class="header__logo-image">
     </a>
     <address class="address header__address">
-      <a class="address__link" href="tel:+99999555555">+9 999 555 5555</a><br>
+      <a class="address__link" href="tel:+99999555555">+9 999 555 5555</a>
       <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263-265, Амстердам</p>
     </address>
@@ -41,9 +39,9 @@
     <section class="cover">
       <div class="overlay"></div>
       <h1 class="cover__title">
-        <span class="aligned-text">Oн<span class="letter-spacing-extended">о</span></span>
-        <span class="aligned-text aligned-text_center">теб<span class="letter-spacing-extended">e</span></span>
-        <span class="aligned-text aligned-text_right">н<span class="letter-spacing-extended">адо</span></span>
+        O<span class="letter-spacing-extended">но</span>
+        <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бe</span></span>
+        <span class="aligned-text aligned-text_right "><span class="letter-spacing-extended">н</span>aд<span class="no-letter-spacing">о</span></span>
       </h1>
       <div class="cover__description">
         <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
@@ -94,22 +92,20 @@
         <div class="about__logo">
           <img
                   src="./images/logo-white.svg"
-                  alt="Site logo"
+                  alt="белый логотип сайта Оно тебе надо на черном круге"
                   class="about__logo-image"
                   >
         </div>
       </div>
       <div class="about__column">
-        <div class="about__title">
-          <h3>Об аукционе</h3>
-        </div>
-        <div class="about__text">
-          <p>
+        <h3 class="about__title">Об аукционе</h3>
+        <div class="about__text-container">
+          <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
             должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
             может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
           </p>
-          <p>
+          <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
             Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту
             или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил
@@ -123,7 +119,7 @@
 
   <footer class="footer">
     <address class="address">
-      <a class="address__link" href="tel:+99999555555">+9 999 555 5555</a><br>
+      <a class="address__link" href="tel:+99999555555">+9 999 555 5555</a>
       <a class="address__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
       <p>наб. Принсенграхт 263-265, Амстердам</p>
     </address>
@@ -137,17 +133,24 @@
     <ul class="footer__social-list">
       <li class="footer__social-list-item">
         <a href="#" class="footer__social-link">
-          <img src="./images/yt.svg" alt="youtube icon" class="footer__social-icon" width="48" height="48">
+          <img src="./images/yt.svg"
+               alt="Иконка юутюб"
+               class="footer__social-icon"
+               >
         </a>
       </li>
       <li class="footer__social-list-item">
         <a href="#" class="footer__social-link">
-          <img src="./images/vk.svg" alt="youtube icon" class="footer__social-icon" width="48" height="48">
+          <img src="./images/vk.svg"
+               alt="иконка вконтакте"
+               class="footer__social-icon">
         </a>
       </li>
       <li class="footer__social-list-item">
         <a href="#" class="footer__social-link">
-          <img src="./images/pinterest.svg" alt="youtube icon" class="footer__social-icon" width="48" height="48">
+          <img src="./images/pinterest.svg"
+               alt="иконка пинтерест"
+               class="footer__social-icon">
         </a>
       </li>
     </ul>
